add attributes to hubs
